--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/wings.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/wings.yml
@@ -30,7 +30,8 @@
     maxSpeed: 0.75
     maxAcceleration: 0.125
     horizontalSpeed: 0.85
-# 翅膀，maxAcceleration = 0.1 + 加速度 / 100% / 20
+# 翅膀
+# maxAcceleration = 0.1 + 加速度 / 100% / 20
 鸟妖之翼:
     flightTime: 43
     maxSpeed: 0.92
@@ -116,6 +117,48 @@
     horizontalSpeed: 1.3
     isWing: true
 逸界之翼:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+天界翼靴:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+龙蒿叶之翼:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+极乐之翼:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+极乐翼靴:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+始源林海之翼:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+Drew之翼:
+    flightTime: 60
+    maxSpeed: 1.4
+    maxAcceleration: 0.225
+    horizontalSpeed: 1.4
+    isWing: true
+炽天使翼靴:
     flightTime: 60
     maxSpeed: 1.4
     maxAcceleration: 0.225
