--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -252,10 +252,7 @@ shops:
     - 拉杆
     - 南瓜种子
     - 蛛丝
-    骷髅王:
-    - 地牢砖
-    世纪之花:
-    - 丛林蜥蜴砖
+    - 树之祭祀:3
   裁缝:
     default:
     - 苦力怕时装
