--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -787,6 +787,7 @@
     2:
       items:
       - 痴愚金龙干细胞
+      - 阳炎战旗:1:1:0.25
       - 爆破剑:1:1:0.1
       - 闪耀金羽:15:21
       - 铂金币:1
@@ -938,6 +939,7 @@
       - 恣睢
     2:
       items:
+      - 灾厄
       - 盖尔大剑
       - 湮灭余烬:30:40
       - 铂金币:30
