--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -2000,6 +2000,54 @@ Drew之翼:
     maxMana: 20
   worth: 200000
   rarity: 1
+阳炎战旗:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMeleeMulti: 0.1
+    damageTrueMeleeMulti: 0.1
+    useSpeedMeleeMulti: 0.1
+  worth: 22000000
+  rarity: 11
+勇气勋章:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMeleeMulti: 0.1
+    critMelee: 10
+    armorPenetration: 10
+  worth: 24000000
+  rarity: 12
+元素之握:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r近战伤害造成元素谐鸣减益
+  attributes:
+    knockbackMeleeMulti: 1
+    meleeReachMulti: 0.15
+    damageMeleeMulti: 0.15
+    critMelee: 5
+    damageTrueMeleeMulti: 0.2
+    buffInflictMelee: 元素谐鸣|80|1
+  worth: 28000000
+  rarity: 14
+星流之握:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r近战伤害造成超位崩解减益
+  attributes:
+    knockbackMeleeMulti: 1
+    meleeReachMulti: 0.15
+    damageMeleeMulti: 0.15
+    critMelee: 15
+    damageTrueMeleeMulti: 0.2
+    buffInflictMelee: 超位崩解|80|1
+  worth: 40000000
+  rarity: 16
 神射手胸针:
   item: LEASH
   lore:
@@ -2012,24 +2060,51 @@ Drew之翼:
     projectileSpeedArrowMulti: 0.2
   worth: 12000000
   rarity: 8
-灾厄符章:
+痴愚金龙干细胞:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r将大范围内的魔力星牵引向自身
   attributes:
-    damageMagicMulti: 0.15
-    maxMana: 100
-    manaUseMulti: -0.1
-  worth: 12000000
-  rarity: 8
-混乱石:
+    speedMulti: 0.1
+    damageRangedMulti: 0.1
+    critRanged: 5
+  worth: 22000000
+  rarity: 11
+虚无箭袋:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r使用魔力药水时获得魔力烧蚀而非魔力疾病
-  worth: 9600000
-  rarity: 7
+  - §r“充满比夜空更暗的物质”
+  attributes:
+    critRanged: 5
+    damageRangedMulti: 0.15
+    projectileSpeedMulti: 0.25
+  worth: 24000000
+  rarity: 12
+元素箭袋:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r远程伤害造成元素谐鸣减益
+  attributes:
+    critRanged: 10
+    damageRangedMulti: 0.15
+    projectileSpeedMulti: 0.35
+    buffInflictRanged: 元素谐鸣|80|1
+  worth: 28000000
+  rarity: 14
+星流箭袋:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r远程伤害造成超位崩解减益
+  attributes:
+    critRanged: 15
+    damageRangedMulti: 0.15
+    projectileSpeedMulti: 0.4
+    buffInflictRanged: 超位崩解|80|1
+  worth: 40000000
+  rarity: 16
 魔能谐振仪:
   item: LEASH
   lore:
@@ -2042,81 +2117,112 @@ Drew之翼:
     damageMagicMulti: 0.06
   worth: 2400000
   rarity: 4
-神圣符文:
+混乱石:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r仆从攻击敌人时，玩家将获得下列增益中的任意一个：
-  - §r神圣之辉：+6生命再生速度
-  - §r神圣之佑：增加16点防御力和4%伤害减免
-  - §r神圣之力：+10%召唤伤害
-  worth: 4800000
-  rarity: 5
+  - §r使用魔力药水时获得魔力烧蚀而非魔力疾病
+  worth: 9600000
+  rarity: 7
+灾厄符章:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r将大范围内的魔力星牵引向自身
+  attributes:
+    damageMagicMulti: 0.15
+    maxMana: 100
+    manaUseMulti: -0.1
+  worth: 12000000
+  rarity: 8
+魔能过载仪:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r手持魔法武器时对敌人造成魔法伤害则触发以下效果：
+  - §r尝试额外消耗5点魔力，若成功则使本次暴击前伤害增加50点
+  attributes:
+    regen: -10
+    maxMana: 60
+  worth: 22000000
+  rarity: 11
+空灵护符:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r将大范围内的魔力星牵引向自身
+  - §r需要时自动使用魔力药水
+  - §r“一枚无暇的护符♪”
+  attributes:
+    damageMagicMulti: 0.15
+    critMagic: 5
+    manaUseMulti: -0.1
+    maxMana: 120
+  worth: 28000000
+  rarity: 14
+魔能熔毁仪:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r使用魔力药水时获得魔力熔蚀而非魔力疾病
+  - §r魔力熔蚀在对玩家造成伤害的同时提供额外魔力恢复
+  - §r手持魔法武器时对敌人造成魔法伤害则触发以下效果：
+  - §r尝试额外消耗当前魔力的5%（至少为10）
+  - §r若成功，则将本次暴击前伤害提升额外魔力损耗的10倍
+  attributes:
+    maxMana: 80
+  worth: 40000000
+  rarity: 16
 灵魂浮雕:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r仆从攻击敌人时，玩家将获得下列增益中的任意一个：
+  - §r仆从攻击敌人时，玩家将随机获得下列增益中的一个：
   - §r灵魂恢复：+4生命再生速度
   - §r灵魂防御：增加12点防御力和3%伤害减免
   - §r灵魂力量：+10%召唤伤害
   worth: 400000
   rarity: 2
-斯塔提斯的诅咒:
+神圣符文:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r召唤物命中后造成神圣之火减益
-  - §r不能与下位合成同时装备
-  attributes:
-    minionLimit: 3
-    damageSummonMulti: 0.1
-    buffInflictSummon: 神圣之火|60|1
-  worth: 20000000
-  rarity: 10
-斯塔提斯的祝福:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  - §r召唤物命中后造成神圣之火减益
-  attributes:
-    minionLimit: 2
-    damageSummonMulti: 0.1
-    buffInflictSummon: 神圣之火|60|1
-  worth: 9600000
-  rarity: 7
-始源暗影炎:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  - §r召唤物命中后造成暗影焰减益
-  attributes:
-    minionLimit: 1
-    buffInflictSummon: 暗影焰|60|1
+  - §r仆从攻击敌人时，玩家将随机获得下列增益中的一个：
+  - §r神圣之辉：+5生命再生速度
+  - §r神圣之佑：增加16点防御力和4%伤害减免
+  - §r神圣之力：+10%召唤伤害
   worth: 4800000
   rarity: 5
-玷星之源:
+幻魂神物:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r召唤物命中后造成幻星感染减益
-  - §r不能与下位合成同时装备
-  attributes:
-    minionLimit: 2
-    damageSummonMulti: 0.07
-    buffInflictSummon: 幻星感染|40|1
-  worth: 12000000
-  rarity: 8
-星爆核心:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  - §r召唤物命中后小概率造成幻星感染减益
+  - §r仆从攻击敌人时，玩家将随机获得下列增益中的一个：
+  - §r神圣之辉：+6生命再生速度
+  - §r神圣之佑：增加20点防御力和5%伤害减免
+  - §r神圣之力：+10%召唤伤害
   attributes:
     minionLimit: 1
-    buffInflictSummon: 幻星感染|40|0.1
-  worth: 9600000
-  rarity: 7
+  worth: 26000000
+  rarity: 13
+钨钢电池:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageSummonMulti: 0.07
+  worth: 200000
+  rarity: 1
+伏打凝胶:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后有概率造成带电减益
+  attributes:
+    minionLimit: 1
+    buffInflictSummon: 带电|40|0.2
+  worth: 400000
+  rarity: 2
 凝胶充能电池:
   item: LEASH
   lore:
@@ -2138,66 +2244,133 @@ Drew之翼:
     buffInflictSummon: 辐射|40|1
   worth: 4800000
   rarity: 5
-伏打凝胶:
+始源暗影炎:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r召唤物命中后有概率造成带电减益
+  - §r召唤物命中后造成暗影焰减益
   attributes:
     minionLimit: 1
-    buffInflictSummon: 带电|40|0.2
-  worth: 400000
-  rarity: 2
-钨钢电池:
+    buffInflictSummon: 暗影焰|60|1
+  worth: 4800000
+  rarity: 5
+星爆核心:
   item: LEASH
   lore:
   - §r[饰品]
+  - §r召唤物命中后小概率造成幻星感染减益
   attributes:
-    damageSummonMulti: 0.07
-  worth: 200000
-  rarity: 1
-融合之脑:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  attributes:
-    damageMulti: 0.1
-    crit: 3
-    damageSummonMulti: 0.03
-  worth: 2400000
-  rarity: 4
-腐烂之脑:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  attributes:
-    damageMulti: 0.1
-  worth: 800000
-  rarity: 3
-旱海鲨牙项链:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  attributes:
-    armorPenetration: 20
-    damageMulti: 0.06
+    minionLimit: 1
+    buffInflictSummon: 幻星感染|40|0.1
   worth: 9600000
   rarity: 7
-恼怒项链:
+斯塔提斯的祝福:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r当玩家的生命值低于50%时，伤害增加20%
-  worth: 12000000
+  - §r召唤物命中后造成神圣之火减益
+  attributes:
+    minionLimit: 2
+    damageSummonMulti: 0.1
+    buffInflictSummon: 神圣之火|60|1
+  worth: 9600000
   rarity: 7
-利维坦龙涎香:
+玷星之源:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成幻星感染减益
+  - §r不能与下位合成同时装备
+  attributes:
+    minionLimit: 2
+    damageSummonMulti: 0.07
+    buffInflictSummon: 幻星感染|40|1
+  worth: 12000000
+  rarity: 8
+斯塔提斯的诅咒:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成夜魇减益
+  - §r不能与下位合成同时装备
+  attributes:
+    minionLimit: 3
+    damageSummonMulti: 0.1
+    buffInflictSummon: 夜魇|60|1
+  worth: 20000000
+  rarity: 10
+核子之源:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成夜魇减益
+  - §r不能与下位合成同时装备
+  attributes:
+    minionLimit: 5
+    damageSummonMulti: 0.15
+    buffInflictSummon: 夜魇|60|1
+  worth: 28000000
+  rarity: 14
+惧魂神物:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r使你免疫死亡低语减益
+  attributes:
+    useSpeedMeleeMulti: 0.1
+    projectileSpeedMulti: 0.1
+    minionLimit: 1
+    manaUseMulti: -0.15
+    buffImmune: 死亡低语
+  worth: 22000000
+  rarity: 11
+渎魂神物:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r使你的召唤物附带神圣之火debuff
+  attributes:
+    regen: 6
+    barrierMax: 50
+    minionLimit: 1
+    buffInflictSummon: 神圣之火|30|1
+  worth: 24000000
+  rarity: 12
+维魂神物:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r“致命失误！”
+  attributes:
+    damageMulti: 0.25
+    damageTakenMulti: 0.15
+  worth: 28000000
+  rarity: 14
+圣魂神物:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r“忠！诚！”
+  attributes:
+    minionLimit: 2
+  worth: 30000000
+  rarity: 15
+焦热地狱:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r你的任何攻击都会附带硫磺火减益
+  attributes:
+    buffInflict: 硫磺火|80|1
+  worth: 4800000
+  rarity: 5
+灾劫虚空:
   item: LEASH
   lore:
   - §r[饰品]
   attributes:
-    damageMulti: 0.05
-    damageTakenMulti: -0.05
-    defence: 20
+    damageMulti: 0.12
+    damageTakenMulti: 0.1
   worth: 9600000
   rarity: 7
 终结虚空:
@@ -2210,24 +2383,107 @@ Drew之翼:
     buffImmune: 硫磺火
   worth: 12000000
   rarity: 8
-灾劫虚空:
+腐烂之脑:
   item: LEASH
   lore:
   - §r[饰品]
   attributes:
-    damageMulti: 0.12
-    damageTakenMulti: 0.1
+    damageMulti: 0.1
+  worth: 800000
+  rarity: 3
+融合之脑:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.1
+    crit: 3
+    damageSummonMulti: 0.03
+  worth: 2400000
+  rarity: 4
+聚合之脑:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.15
+    crit: 5
+    damageSummonMulti: 0.05
+  worth: 28000000
+  rarity: 14
+旱海鲨牙项链:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    armorPenetration: 20
+    damageMulti: 0.06
   worth: 9600000
   rarity: 7
-焦热地狱:
+猎魂鲨齿项链:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r你的任何攻击都会附带硫磺火减益
+  - §r取自顶级掠食者的恐怖战利品
   attributes:
-    buffInflict: 硫磺火|80|1
-  worth: 4800000
-  rarity: 5
+    armorPenetration: 30
+    damageMulti: 0.15
+  worth: 26000000
+  rarity: 13
+恼怒项链:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r当玩家的生命值低于50%时，伤害增加20%
+  worth: 12000000
+  rarity: 7
+蚀日尊戒:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r蕴含着日蚀之阴的力量
+  attributes:
+    damageMulti: 0.12
+    regen: 2
+    minionLimit: 2
+    defence: 10
+  worth: 28000000
+  rarity: 14
+灾厄:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r攻击将附带孱弱巫咒减益，造成伤害的同时削弱敌人的护甲与伤害抗性
+  attributes:
+    buffInflict: 孱弱巫咒|30|1
+  worth: 30000000
+  rarity: 15
+幻灭心元石:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r幻灭于不可知的仇恨中，它仍然包含着归一心元石大部分的力量......
+  attributes:
+    crit: 10
+    damageMulti: 0.2
+    maxHealthMulti: -0.1
+    regen: -6
+    damageTakenMulti: 0.05
+    defence: -20
+    speedMulti: 0.1
+    flightTimeMulti: 0.2
+  worth: 40000000
+  rarity: 16
+利维坦龙涎香:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.05
+    damageTakenMulti: -0.05
+    defence: 20
+  worth: 9600000
+  rarity: 7
 归一心元石:
   item: LEASH
   lore:
@@ -2242,6 +2498,27 @@ Drew之翼:
   - §r感谢众多支持者的努力，让泰拉瑞亚以及灾厄成为现实
   worth: 12000000
   rarity: 1000
+海之盾:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    defence: 4
+    regen: 4
+    speedMulti: 0.1
+  worth: 7200000
+  rarity: 5
+宝光盾牌:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r双击一个方向可以冲刺
+  attributes:
+    defence: 16
+    damageTakenMulti: -0.08
+    maxHealth: 40
+  worth: 7200000
+  rarity: 5
 阿斯加德之英勇:
   item: LEASH
   lore:
@@ -2254,37 +2531,56 @@ Drew之翼:
     knockbackResistance: 1
   worth: 9600000
   rarity: 7
-宝光盾牌:
+极乐之庇护:
   item: LEASH
   lore:
   - §r[饰品]
   - §r双击一个方向可以冲刺
   attributes:
-    defence: 16
-    damageTakenMulti: -0.08
-    maxHealth: 40
-  worth: 7200000
-  rarity: 5
-海之盾:
+    defence: 32
+    damageTakenMulti: -0.05
+    knockbackResistance: 1
+    buffImmune: 燃烧|霜火|狱炎|咒火|暗影焰|硫磺火|破晓|夜魇|神圣之火
+  worth: 24000000
+  rarity: 12
+阿斯加德之庇护:
   item: LEASH
   lore:
   - §r[饰品]
+  - §r双击一个方向可以冲刺
   attributes:
-    defence: 4
-    regen: 4
-    speedMulti: 0.1
-  worth: 7200000
-  rarity: 5
+    defence: 40
+    damageTakenMulti: -0.1
+    knockbackResistance: 1
+    buffImmune: 燃烧|霜火|狱炎|咒火|暗影焰|硫磺火|破晓|夜魇|神圣之火|弑神怒焰
+  worth: 28000000
+  rarity: 14
 神圣护符:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r提供生命恢复并减少治疗药水的冷却时间
+  - §r减少治疗药水的冷却时间
   attributes:
     regen: 2
     invulnerabilityTick: 8
   worth: 16000000
   rarity: 9
+神之壁垒:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r减少治疗药水的冷却时间
+  - §r当团队中附近玩家受伤时，若生命值高于25%则在计算一切减免前：
+  - §r-> 受到相当于本次伤害5%的真实伤害
+  - §r-> 使本次伤害降低15%
+  - §r你受到的伤害无法被其他玩家以此方式减少
+  - §r生命值低于一半时减少受到的伤害
+  attributes:
+    regen: 2
+    invulnerabilityTick: 10
+    knockbackResistance: 1
+  worth: 28000000
+  rarity: 14
 血契:
   item: LEASH
   lore:
@@ -2301,13 +2597,39 @@ Drew之翼:
   - §r减半接触伤害，此效果有20秒冷却时间
   worth: 12000000
   rarity: 8
+血炎晶核:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r受到伤害时会按照最终伤害损失防御
+  - §r因此损失的防御会随着时间流逝而逐渐恢复
+  - §r每恢复1点防御便为你回复1点生命值
+  - §r只对超过50点的伤害有效
+  - §r“哦天哪！那是接近的！”
+  worth: 24000000
+  rarity: 12
+血神圣杯:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r伤害结算前会分别进行以下尝试：
+  - §r-> 试图损失至多为最终伤害75%的防御
+  - §r-> 短暂恢复最多为最终伤害95%的生命值，但成功恢复的生命值将被快速扣除
+  - §r因此损失的防御会随着时间流逝而逐渐恢复
+  - §r每恢复1点防御便为你回复1点生命值
+  - §r只对超过100点的伤害有效
+  - §r“竟然为了一滴血付出了这么多”
+  attributes:
+    maxHealthMulti: 0.25
+  worth: 28000000
+  rarity: 14
 钨钢屏障生成仪:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r为你提供一个钨钢屏障
-  - §r屏障在吸收80点伤害后破碎，破碎后进入20秒冷却
-  - §r屏障存在时你额外获得20防御
+  - §r拥有屏障时额外获得20防御
+  attributes:
+    barrierMax: 50
   worth: 200000
   rarity: 1
 阴阳吸星石:
@@ -2318,10 +2640,29 @@ Drew之翼:
     maxHealth: 40
     maxMana: 20
     speedMulti: 0.05
-    damageTakenMulti: -0.15
+    damageTakenMulti: -0.1
     regen: 4
   worth: 16000000
   rarity: 9
+化绵留香石:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r屏障激活时会提供40点防御并降低7.5%所受伤害
+  attributes:
+    barrierMax: 360
+  worth: 28000000
+  rarity: 14
+嘉登之心:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r屏障激活时会提供6生命再生并降低10%所受伤害
+  - §r“纳米机器，小子。”
+  attributes:
+    barrierMax: 275
+  worth: 30000000
+  rarity: 15
 舐火甲壳:
   item: LEASH
   lore:
@@ -2341,6 +2682,25 @@ Drew之翼:
     buffImmune: 硫磺火
   worth: 4800000
   rarity: 5
+星云之核:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r受到致死伤害前会受到相当于本次伤害最终值1.75倍的治疗效果
+  - §r此效果有180秒冷却时间，最低治疗量为200
+  worth: 28000000
+  rarity: 14
+魔君的礼物:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r神的力量蕴藏于其中
+  attributes:
+    defence: 45
+    damageMulti: 0.15
+    speedMulti: 0.1
+  worth: 30000000
+  rarity: 15
 钓鱼竿:
   item: FISHING_ROD
   lore:
