--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -3932,12 +3932,56 @@ TINKER_WORKBENCH:
     - 活力凝胶
     - 光明之魂:2
     - 暗影之魂:2
+  '33_1':
+    requireLevel: 1
+    resultItem: 勇气勋章
+    requireItem:
+    - 龙蒿锭:8
+    - 泰坦手套
+  '33_2':
+    requireLevel: 1
+    resultItem: 元素之握
+    requireItem:
+    - 烈火手套
+    - 夜明锭:8
+    - 星系异石:4
+    - 化神魂精:4
+  '33_3':
+    requireLevel: 1
+    resultItem: 星流之握
+    requireItem:
+    - 元素之握
+    - 星流棱晶:8
+    - 化神魂精:2
   '34':
     requireLevel: 1
     resultItem: 神射手胸针
     requireItem:
     - 灾劫核心:2
     - 游侠徽章
+  '34_1':
+    requireLevel: 1
+    resultItem: 虚无箭袋
+    requireItem:
+    - 潜行者箭袋
+    - 暗离子体:3
+    - 星系异石:5
+  '34_2':
+    requireLevel: 1
+    resultItem: 元素箭袋
+    requireItem:
+    - 虚无箭袋
+    - 神射手胸针
+    - 夜明锭:8
+    - 星系异石:4
+    - 化神魂精:4
+  '34_3':
+    requireLevel: 1
+    resultItem: 星流箭袋
+    requireItem:
+    - 元素箭袋
+    - 星流棱晶:8
+    - 化神魂精:2
   '35':
     requireLevel: 1
     resultItem: 灾厄符章
@@ -3945,7 +3989,38 @@ TINKER_WORKBENCH:
     - 天界徽章
     - 灾厄尘:15
     - 熔渣锭:5
+  '35_1':
+    requireLevel: 1
+    resultItem: 魔能过载仪
+    requireItem:
+    - 魔能谐振仪
+    - 夜明锭:4
+    - 星系异石:4
+    - 灵质:2
+  '35_2':
+    requireLevel: 1
+    resultItem: 空灵护符
+    requireItem:
+    - 灾厄符章
+    - 魔力花
+    - 夜明锭:8
+    - 星系异石:4
+    - 化神魂精:4
+  '35_3':
+    requireLevel: 1
+    resultItem: 魔能熔毁仪
+    requireItem:
+    - 魔能过载仪
+    - 混乱石
+    - 湮灭余烬:8
+    - 化神魂精:2
   '36':
+    requireLevel: 1
+    resultItem: 灵魂浮雕
+    requireItem:
+    - 黑曜石:15
+    - 钻石:5
+  '37':
     requireLevel: 1
     resultItem: 神圣符文
     requireItem:
@@ -3954,19 +4029,22 @@ TINKER_WORKBENCH:
     - 恐惧之魂:5
     - 力量之魂:5
     - 视域之魂:5
-  '37':
+  '37_1':
     requireLevel: 1
-    resultItem: 灵魂浮雕
+    resultItem: 幻魂神物
     requireItem:
-    - 黑曜石:15
-    - 钻石:5
+    - 神圣符文
+    - 毁灭之灵:5
+    - 黑曜石:16
+    - 起源之簇:25
   '38':
     requireLevel: 1
-    resultItem: 斯塔提斯的诅咒
+    resultItem: 凝胶充能电池
     requireItem:
-    - 星尘碎片:10
-    - 斯塔提斯的祝福
-    - 始源暗影炎
+    - 钨钢电池
+    - 伏打凝胶
+    - 纯净凝胶:10
+    - 风暴之颚:2
   '39':
     requireLevel: 1
     resultItem: 斯塔提斯的祝福
@@ -3985,18 +4063,64 @@ TINKER_WORKBENCH:
     - 生命合金:3
   '41':
     requireLevel: 1
-    resultItem: 凝胶充能电池
+    resultItem: 斯塔提斯的诅咒
     requireItem:
-    - 钨钢电池
-    - 伏打凝胶
-    - 纯净凝胶:10
-    - 风暴之颚:2
+    - 星尘碎片:10
+    - 斯塔提斯的祝福
+    - 始源暗影炎
+  '41_1':
+    requireLevel: 1
+    resultItem: 核子之源
+    requireItem:
+    - 玷星之源
+    - 斯塔提斯的诅咒
+    - 夜明锭:8
+    - 星系异石:4
+    - 化神魂精:4
+  '41_2':
+    requireLevel: 1
+    resultItem: 惧魂神物
+    requireItem:
+    - 灵质:5
+    - 黑曜石:16
+    - 起源之簇:25
+  '41_3':
+    requireLevel: 1
+    resultItem: 渎魂神物
+    requireItem:
+    - 神圣晶石:5
+    - 黑曜石:16
+    - 起源之簇:25
+  '41_4':
+    requireLevel: 1
+    resultItem: 维魂神物
+    requireItem:
+    - 宇宙锭:5
+    - 黑曜石:16
+    - 起源之簇:25
+  '41_5':
+    requireLevel: 1
+    resultItem: 圣魂神物
+    requireItem:
+    - 龙魂碎片:5
+    - 黑曜石:16
+    - 起源之簇:25
   '42':
     requireLevel: 1
     resultItem: 融合之脑
     requireItem:
     - 腐烂之脑
     - 暗影之魂:3
+  '42_1':
+    requireLevel: 1
+    resultItem: 聚合之脑
+    requireItem:
+    - 融合之脑
+    - 污痕核心:5
+    - 软体动物外壳:10
+    - 瘟疫细胞罐:15
+    - 宇宙锭:5
+    - 化神魂精:4
   '43':
     requireLevel: 1
     resultItem: 旱海鲨牙项链
@@ -4004,12 +4128,25 @@ TINKER_WORKBENCH:
     - 鲨牙项链
     - 复仇者徽章
     - 大狂鲨鳞
+  '43_1':
+    requireLevel: 1
+    resultItem: 猎魂鲨齿项链
+    requireItem:
+    - 旱海鲨牙项链
+    - 猎魂鲨牙:6
+    - 深渊细胞:15
   '44':
     requireLevel: 1
     resultItem: 恼怒项链
     requireItem:
     - 复仇者徽章
     - 永恒锭:2
+  '44_1':
+    requireLevel: 1
+    resultItem: 蚀日尊戒
+    requireItem:
+    - 龙蒿锭:10
+    - 日蚀之阴碎片:20
   '45':
     requireLevel: 1
     resultItem: 终结虚空
@@ -4020,15 +4157,18 @@ TINKER_WORKBENCH:
     - 混乱核心
     - 熔渣锭:3
     - 魔鬼之庇护
+  '45_1':
+    requireLevel: 1
+    resultItem: 幻灭心元石
+    requireItem:
+    - 归一心元石
+    - 湮灭余烬:8
   '46':
     requireLevel: 1
-    resultItem: 阿斯加德之英勇
+    resultItem: 海之盾
     requireItem:
-    - 黑曜石护盾
-    - 宝光盾牌
-    - 海之盾
-    - 克苏鲁之眼盾
-    - 灾劫核心
+    - 海星:5
+    - 海洋残渣:5
   '47':
     requireLevel: 1
     resultItem: 宝光盾牌
@@ -4037,10 +4177,30 @@ TINKER_WORKBENCH:
     - 水晶碎块:10
   '48':
     requireLevel: 1
-    resultItem: 海之盾
+    resultItem: 阿斯加德之英勇
     requireItem:
-    - 海星:5
-    - 海洋残渣:5
+    - 黑曜石护盾
+    - 宝光盾牌
+    - 海之盾
+    - 克苏鲁之眼盾
+    - 灾劫核心
+  '48_1':
+    requireLevel: 1
+    resultItem: 阿斯加德之庇护
+    requireItem:
+    - 阿斯加德之英勇
+    - 极乐之庇护
+    - 宇宙锭:10
+    - 化神魂精:4
+  '48_2':
+    requireLevel: 1
+    resultItem: 血神圣杯
+    requireItem:
+    - 血契
+    - 血肉图腾
+    - 血炎晶核
+    - 血石核心:5
+    - 化神魂精:4
   '49':
     requireLevel: 1
     resultItem: 神圣护符
@@ -4049,6 +4209,14 @@ TINKER_WORKBENCH:
     - 十字项链
     - 炫星锭:10
     - 海棱晶:15
+  '49_1':
+    requireLevel: 1
+    resultItem: 神之壁垒
+    requireItem:
+    - 冰冻护盾
+    - 神圣护符
+    - 圣金源锭:10
+    - 化神魂精:4
   '50':
     requireLevel: 1
     resultItem: 阴阳吸星石
@@ -4057,6 +4225,16 @@ TINKER_WORKBENCH:
     - 软体动物外壳
     - 炫星锭:10
     - 星系异石:5
+  '51':
+    requireLevel: 1
+    resultItem: 化绵留香石
+    requireItem:
+    - 钨钢屏障生成仪
+    - 阴阳吸星石
+    - 神秘电路:16
+    - 可疑镀层:16
+    - 宇宙锭:5
+    - 化神魂精:4
 远古操纵机:
   '1':
     requireLevel: 1
