misc items as well as misc bugfix
misc items such as underwater gear and potions, wing bugfix, crafting bugfix, player buff persist when being offline

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/SlotConfig.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/SlotConfig.yml
@@ -116,6 +116,12 @@ Script:
         case "核燃料棒":
           if (otherAccessoryName == "玷星之源") return true;
           break;
+        case "深渊潜游服":
+          if (otherAccessoryName == "深渊潜游装") return true;
+          break;
+        case "深渊潜游装":
+          if (otherAccessoryName == "深渊潜游服") return true;
+          break;
       }
       return false;
     }
