--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -350,6 +350,7 @@
   荒漠灾虫:
     1:
       items:
+      - 海波项链
       - 珍珠碎片:30:40
       - 珊瑚:30:40
       - 海星:30:40
@@ -534,6 +535,7 @@
       - 深海权杖
     2:
       items:
+      - 海波纹章
       - 海之烧灼:1:1:0.1
       - 核燃料棒:1:1:0.3333
       - 金币:30
