--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/potionItem.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/potionItem.yml
@@ -14,6 +14,10 @@
     health: 300
 超级治疗药水:
     health: 400
+至尊治疗药水:
+    health: 500
+终极治疗药水:
+    health: 600
 恢复药水:
     health: 160
     mana: 80
@@ -25,6 +29,8 @@
     mana: 200
 超级魔力药水:
     mana: 300
+至尊魔力药水:
+    mana: 400
 生命水晶:
     maxHealth: 40
 生命果:
@@ -62,7 +68,7 @@
 耐力药水:
     耐力: 9600
 鱼鳃药水:
-    鱼鳃: 4800
+    鱼鳃: 7200
 隐身药水:
     隐身: 3600
 铁皮药水:
@@ -87,6 +93,14 @@
     泰坦: 9600
 怒气药水:
     怒气: 4800
+虫潮药水:
+    虫潮: 18000
+禅定药水:
+    禅定: 18000
+磁力药水:
+    磁铁: 18000
+无尽吞噬药水:
+    无尽空虚: 18000
 熟虾:
     饱足: 12000
 刺身:
