--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -173,10 +173,9 @@ deathMessages:
   - <victim> 被漆黑的烈焰燃尽
   Debuff_辐射:
   - <victim> 死于辐射
-  Debuff_孱弱巫咒:
-  - <victim> 被硫磺烈焰烧焦了
   Debuff_幻星感染:
   - <victim> 成为了星辉瘟疫的一部分
+  - <victim> 的皮肤被星体病毒侵蚀了
   Debuff_瘟疫:
   - <victim> 的血肉被瘟疫所融化
   - <victim> 已无药可医
@@ -184,6 +183,17 @@ deathMessages:
   - <victim> 被自己的罪孽吞噬了
   Debuff_夜魇:
   - <victim> 被月之射线焚烧殆尽
+  Debuff_弑神怒焰:
+  - <victim> 的灵魂消散了
+  Debuff_龙焰:
+  - <victim> 离解成灰
+  Debuff_超位崩解:
+  - <victim> 被奇迹般的科技进步扫进了历史的垃圾堆
+  - <victim> 与星流能量共振而塌缩了
+  Debuff_孱弱巫咒:
+  - <victim> 被硫磺烈焰烧焦了
+  Debuff_血神之凋零:
+  - <victim> 成为了血神的祭品
 settings:
   playerInventories:
   - piggyBank
