lifesteal and piggy bank tweaks

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -1186,6 +1186,7 @@ sets:
     - ''
     - §a套装效果：
     - §a获得30点护甲穿透和0.2%的生命汲取
+    - §a生命汲取每帧最多触发一次，且每次治疗量不可超过最大生命值的5%
     - §a提高10%伤害和暴击率并+2召唤栏
     - §a按下套装增益键[默认为V]进入深渊狂乱状态5秒
     - §a深渊狂乱进一步提升你的伤害与暴击率，同时额外获得0.4%的生命汲取
